--- a/index.html
+++ b/index.html
@@ -6,21 +6,108 @@
   <title>Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Submenu styles */
-    .submenu a {
-      display: block;
-      padding: 8px 0 8px 15px;
-      color: #ddd;
-      font-size: 0.9em;
-      text-decoration: none;
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #121212;
+      color: white;
     }
-    .submenu a:hover {
+
+    .sidebar {
+      height: 100%;
+      width: 250px;
+      position: fixed;
+      left: -250px;
+      top: 0;
+      background-color: #333;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
+      z-index: 1000;
+    }
+
+    .sidebar.active {
+      left: 0;
+    }
+
+    .sidebar a {
+      padding: 10px 20px;
+      text-decoration: none;
+      font-size: 18px;
+      color: #ddd;
+      display: block;
+    }
+
+    .sidebar a:hover {
       color: #fff;
     }
-    /* Optional: cursor pointer on submenu toggle */
-    .submenu-toggle {
+
+    .closebtn {
+      position: absolute;
+      top: 0;
+      right: 10px;
+      font-size: 36px;
+      margin-left: 50px;
+      color: white;
+    }
+
+    .submenu-sidebar {
+      height: 100%;
+      width: 250px;
+      position: fixed;
+      left: -250px;
+      top: 0;
+      background-color: #444;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
+      z-index: 999;
+    }
+
+    .submenu-sidebar.active {
+      left: 250px;
+    }
+
+    .submenu-sidebar a {
+      padding: 10px 20px;
+      text-decoration: none;
+      font-size: 16px;
+      color: #ccc;
+      display: block;
+    }
+
+    .submenu-sidebar a:hover {
+      color: #fff;
+    }
+
+    .hero {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .explore-button {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      font-size: 24px;
+      background-color: #222;
+      color: white;
+      border: none;
+      padding: 10px 15px;
       cursor: pointer;
-      user-select: none;
+      z-index: 1100;
+    }
+
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 1100;
+    }
+
+    .whatsapp-button img {
+      width: 50px;
+      height: 50px;
     }
   </style>
 </head>
@@ -30,28 +117,23 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-
-    <!-- Projects with submenu -->
-    <a href="javascript:void(0)" class="submenu-toggle" onclick="toggleSubmenu()">Projects &#9662;</a>
-    <div id="projects-submenu" class="submenu" style="display: none;">
-      <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
-        Raspberry Pi Pico Projects
-      </a>
-      <!-- Add more project links here -->
-    </div>
-
+    <a href="javascript:void(0)" onclick="toggleProjects()">Projects &#9654;</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
 
+  <!-- Slide-Out Projects Menu -->
+  <div id="projectsMenu" class="submenu-sidebar">
+    <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank">Raspberry Pi Pico Projects</a>
+    <!-- Add more project links here -->
+  </div>
+
   <!-- Hero Section -->
   <div class="hero">
-    <div class="hero-content">
-      <h1>Johan Opperman</h1>
-      <p>Tech Enthusiast • Developer • Creator</p>
-    </div>
-    <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
+    <h1>Johan Opperman</h1>
+    <p>Tech Enthusiast • Developer • Creator</p>
   </div>
+  <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
 
   <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
@@ -63,18 +145,22 @@
 
   <script>
     function toggleSidebar() {
-      document.getElementById("sidebar").classList.toggle("active");
+      const sidebar = document.getElementById("sidebar");
+      const projectsMenu = document.getElementById("projectsMenu");
+      sidebar.classList.toggle("active");
+
+      // If main sidebar closes, also close projects menu
+      if (!sidebar.classList.contains("active")) {
+        projectsMenu.classList.remove("active");
+      }
     }
 
-    function toggleSubmenu() {
-      const submenu = document.getElementById("projects-submenu");
-      if (submenu.style.display === "none" || submenu.style.display === "") {
-        submenu.style.display = "block";
-      } else {
-        submenu.style.display = "none";
-      }
+    function toggleProjects() {
+      const projectsMenu = document.getElementById("projectsMenu");
+      projectsMenu.classList.toggle("active");
     }
   </script>
 
 </body>
 </html>
+
