--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       color: white;
     }
 
+    /* MAIN SIDEBAR */
     .sidebar {
       height: 100%;
       width: 250px;
@@ -51,6 +52,7 @@
       color: white;
     }
 
+    /* PROJECTS SLIDE-OUT */
     .submenu-sidebar {
       height: 100%;
       width: 250px;
@@ -65,7 +67,7 @@
     }
 
     .submenu-sidebar.active {
-      left: 250px;
+      left: 250px; /* aligns next to main sidebar */
     }
 
     .submenu-sidebar a {
@@ -80,24 +82,30 @@
       color: #fff;
     }
 
+    /* HERO */
     .hero {
-      padding: 60px 20px;
+      padding: 100px 20px 40px;
       text-align: center;
     }
 
+    .hero-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     .explore-button {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      font-size: 24px;
+      margin-top: 30px;
+      font-size: 20px;
       background-color: #222;
       color: white;
       border: none;
-      padding: 10px 15px;
+      padding: 10px 20px;
       cursor: pointer;
-      z-index: 1100;
+      border-radius: 5px;
     }
 
+    /* WHATSAPP */
     .whatsapp-button {
       position: fixed;
       bottom: 20px;
@@ -113,7 +121,7 @@
 </head>
 <body>
 
-  <!-- Sidebar -->
+  <!-- MAIN SIDEBAR -->
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
@@ -122,45 +130,22 @@
     <a href="contact.html">Contact</a>
   </div>
 
-  <!-- Slide-Out Projects Menu -->
+  <!-- PROJECTS SLIDE-OUT MENU -->
   <div id="projectsMenu" class="submenu-sidebar">
     <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank">Raspberry Pi Pico Projects</a>
     <!-- Add more project links here -->
   </div>
 
-  <!-- Hero Section -->
+  <!-- HERO SECTION -->
   <div class="hero">
-    <h1>Johan Opperman</h1>
-    <p>Tech Enthusiast • Developer • Creator</p>
+    <div class="hero-content">
+      <h1>Johan Opperman</h1>
+      <p>Tech Enthusiast • Developer • Creator</p>
+      <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
+    </div>
   </div>
-  <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
 
-  <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
-     target="_blank" 
-     class="whatsapp-button" 
-     title="Chat with me on WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp Icon" />
-  </a>
+  <!-- WHATSAPP FLOATING BUTTON -->
+  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20y
 
-  <script>
-    function toggleSidebar() {
-      const sidebar = document.getElementById("sidebar");
-      const projectsMenu = document.getElementById("projectsMenu");
-      sidebar.classList.toggle("active");
-
-      // If main sidebar closes, also close projects menu
-      if (!sidebar.classList.contains("active")) {
-        projectsMenu.classList.remove("active");
-      }
-    }
-
-    function toggleProjects() {
-      const projectsMenu = document.getElementById("projectsMenu");
-      projectsMenu.classList.toggle("active");
-    }
-  </script>
-
-</body>
-</html>
 
