--- a/index.html
+++ b/index.html
@@ -5,6 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Submenu styles */
+    .submenu a {
+      display: block;
+      padding: 8px 0 8px 15px;
+      color: #ddd;
+      font-size: 0.9em;
+      text-decoration: none;
+    }
+    .submenu a:hover {
+      color: #fff;
+    }
+    .submenu-toggle {
+      cursor: pointer;
+      user-select: none;
+    }
+
+    /* Projects Slide-out Panel */
+    .projects-sidebar {
+      position: fixed;
+      top: 0;
+      right: -280px;
+      width: 280px;
+      height: 100vh;
+      background: #1a1a1a;
+      box-shadow: -4px 0 15px rgba(0, 242, 254, 0.3);
+      overflow-y: auto;
+      transition: right 0.4s ease;
+      z-index: 1002;
+      padding-top: 70px;
+    }
+
+    .projects-sidebar.active {
+      right: 0;
+    }
+
+    .projects-sidebar a {
+      display: block;
+      padding: 15px 30px;
+      color: #00f2fe;
+      font-size: 18px;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .projects-sidebar a:hover {
+      color: #0ff;
+    }
+  </style>
 </head>
 <body>
 
@@ -12,16 +61,17 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-    <a href="javascript:void(0)" class="submenu-toggle" onclick="toggleSubmenu()">Projects &#9654;</a>
+    <a href="javascript:void(0)" class="submenu-toggle" onclick="openProjectsSubmenu()">Projects &#9656;</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
 
-  <!-- Projects submenu (slide-out) -->
-  <div id="projects-submenu" class="submenu-sidebar">
-    <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
-      Raspberry Pi Pico Projects
-    </a>
+  <!-- Slide-out Projects Panel -->
+  <div id="projectsSidebar" class="projects-sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeProjectsSubmenu()">&larr; Back</a>
+    <h3 style="padding: 20px; color: #00f2fe;">Projects</h3>
+    <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank">Raspberry Pi Pico Projects</a>
+    <!-- Add more project links here -->
   </div>
 
   <!-- Hero Section -->
@@ -29,8 +79,8 @@
     <div class="hero-content">
       <h1>Johan Opperman</h1>
       <p>Tech Enthusiast • Developer • Creator</p>
-      <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
     </div>
+    <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
   <!-- WhatsApp Floating Button -->
@@ -38,26 +88,20 @@
      target="_blank" 
      class="whatsapp-button" 
      title="Chat with me on WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp Icon" />
+    <img src="https://img.icons8.com/ios-filled/50/00f2fe/whatsapp--v1.png" alt="WhatsApp Icon" />
   </a>
 
-  <!-- JavaScript -->
   <script>
     function toggleSidebar() {
-      const sidebar = document.getElementById("sidebar");
-      const submenu = document.getElementById("projects-submenu");
-
-      sidebar.classList.toggle("active");
-
-      // Close submenu if sidebar is closing
-      if (!sidebar.classList.contains("active")) {
-        submenu.classList.remove("active");
-      }
+      document.getElementById("sidebar").classList.toggle("active");
     }
 
-    function toggleSubmenu() {
-      const submenu = document.getElementById("projects-submenu");
-      submenu.classList.toggle("active");
+    function openProjectsSubmenu() {
+      document.getElementById("projectsSidebar").classList.add("active");
+    }
+
+    function closeProjectsSubmenu() {
+      document.getElementById("projectsSidebar").classList.remove("active");
     }
   </script>
 
