--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <a href="contact.html">Contact</a>
   </div>
 
+  <!-- Projects with sliding submenu -->
+<a href="javascript:void(0)" class="submenu-toggle" onclick="toggleSubmenu()">Projects &#9662;</a>
+<div id="projects-submenu" class="submenu-slide">
+  <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
+    Raspberry Pi Pico Projects
+  </a>
+</div>
+
   <!-- Hero Section -->
   <div class="hero">
     <div class="hero-content">
