--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-
-    <!-- Projects submenu toggle -->
-    <a href="javascript:void(0)" class="submenu-toggle" onclick="toggleSubmenu()">Projects &#9662;</a>
-    <div id="projects-submenu" class="submenu">
-      <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
-        Raspberry Pi Pico Projects
-      </a>
-    </div>
-
+    <a href="projects.html">Projects</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
@@ -46,12 +38,8 @@
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
-
-    function toggleSubmenu() {
-      const submenu = document.getElementById("projects-submenu");
-      submenu.classList.toggle("open");
-    }
   </script>
 
 </body>
 </html>
+
