--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,7 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
+    <a href="#projects">Projects</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
@@ -26,10 +27,24 @@
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
-  <!-- WhatsApp Button -->
-  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV."
-     target="_blank"
-     class="whatsapp-button"
+  <!-- Projects Section -->
+  <section id="projects" style="padding: 20px;">
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <strong>Raspberry Pi Pico Projects</strong> —  
+        <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
+          View on GitHub
+        </a>
+      </li>
+      <!-- Add more projects here later -->
+    </ul>
+  </section>
+
+  <!-- WhatsApp Floating Button -->
+  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
+     target="_blank" 
+     class="whatsapp-button" 
      title="Chat with me on WhatsApp">
     <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp Icon" />
   </a>
