--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Submenu styles */
+    .submenu a {
+      display: block;
+      padding: 8px 0 8px 15px;
+      color: #ddd;
+      font-size: 0.9em;
+      text-decoration: none;
+    }
+    .submenu a:hover {
+      color: #fff;
+    }
+    /* Optional: cursor pointer on submenu toggle */
+    .submenu-toggle {
+      cursor: pointer;
+      user-select: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -13,7 +30,16 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-    <a href="#projects">Projects</a>
+
+    <!-- Projects with submenu -->
+    <a href="javascript:void(0)" class="submenu-toggle" onclick="toggleSubmenu()">Projects &#9662;</a>
+    <div id="projects-submenu" class="submenu" style="display: none;">
+      <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
+        Raspberry Pi Pico Projects
+      </a>
+      <!-- Add more project links here -->
+    </div>
+
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
@@ -27,20 +53,6 @@
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
-  <!-- Projects Section -->
-  <section id="projects" style="padding: 20px;">
-    <h2>Projects</h2>
-    <ul>
-      <li>
-        <strong>Raspberry Pi Pico Projects</strong> —  
-        <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
-          View on GitHub
-        </a>
-      </li>
-      <!-- Add more projects here later -->
-    </ul>
-  </section>
-
   <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
      target="_blank" 
@@ -53,8 +65,16 @@
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
+
+    function toggleSubmenu() {
+      const submenu = document.getElementById("projects-submenu");
+      if (submenu.style.display === "none" || submenu.style.display === "") {
+        submenu.style.display = "block";
+      } else {
+        submenu.style.display = "none";
+      }
+    }
   </script>
 
 </body>
 </html>
-
