--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
+    <a href="javascript:void(0)" onclick="toggleProjectsPanel()">Projects</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
 
-  <!-- Projects Slide-In Panel -->
+  <!-- Projects Slide-Out Panel -->
   <div id="projects-panel" class="projects-panel">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleProjectsPanel()">&times;</a>
     <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
       Raspberry Pi Pico Projects
     </a>
-    <!-- Add more projects here -->
+    <!-- Add more project links here -->
   </div>
 
   <!-- Hero Section -->
@@ -32,9 +33,8 @@
       <p>Tech Enthusiast • Developer • Creator</p>
     </div>
 
-    <!-- Buttons -->
+    <!-- Explore Button -->
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
-    <button class="projects-button" onclick="toggleProjectsPanel()">📁 Projects</button>
   </div>
 
   <!-- WhatsApp Floating Button -->
@@ -58,4 +58,3 @@
 
 </body>
 </html>
-
