--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-    <a href="javascript:void(0)" onclick="openProjectsPanel()">Projects</a>
+    <a href="javascript:void(0)" onclick="openProjectsPanel()">Projects &#9656;</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
